--- a/app/src/main/res/layout/activity_main_linear.xml
+++ b/app/src/main/res/layout/activity_main_linear.xml
@@ -1,64 +1,58 @@
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:columnCount="2"
-    android:rowCount="4">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_height="match_parent">
 
     <TextView
-        android:layout_row="0"
-        android:layout_columnSpan="2"
-        android:layout_columnWeight="1"
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Look at my GUI"
-        android:textSize="30dp" />
-
-    <Button
-        android:layout_row="1"
-        android:layout_column="0"
-        android:layout_columnWeight="1"
+        android:textSize="30dp"
+        tools:layout_editor_absoluteX="-3dp"
+        tools:layout_editor_absoluteY="0dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <Button
+            android:layout_weight="1"
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Click Here" />
 
-    <CheckBox
-        android:layout_gravity="fill"
-        android:layout_row="1"
-        android:layout_column="1"
-        android:layout_columnWeight="2"
+        <CheckBox
             android:id="@+id/checkBox"
+            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Check this out!"/>
-
-    <ImageButton
-        android:layout_row="2"
-        android:layout_column="0"
-        android:layout_columnWeight="1"
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ImageButton
             android:id="@+id/imageButton"
+            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/flag" />
 
-    <Switch
-        android:layout_gravity="fill"
-        android:layout_row="2"
-        android:layout_column="1"
-        android:layout_columnWeight="2"
+        <Switch
             android:id="@+id/switch1"
+            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Switch on / off" />
+    </LinearLayout>
 
     <EditText
-        android:layout_columnWeight="1"
-        android:layout_columnSpan="2"
         android:id="@+id/textView3"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Type here"
         android:inputType="textPersonName" />
-</GridLayout>
+</LinearLayout>
