--- a/app/src/main/res/layout/activity_main_relative.xml
+++ b/app/src/main/res/layout/activity_main_relative.xml
@@ -1,64 +1,53 @@
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:columnCount="2"
-    android:rowCount="4">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:layout_row="0"
-        android:layout_columnSpan="2"
-        android:layout_columnWeight="1"
+        android:layout_alignParentTop="true"
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Look at my GUI"
         android:textSize="30dp" />
 
     <Button
-        android:layout_row="1"
-        android:layout_column="0"
-        android:layout_columnWeight="1"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentLeft="true"
+        android:gravity="fill"
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Click Here" />
 
     <CheckBox
-        android:layout_gravity="fill"
-        android:layout_row="1"
-        android:layout_column="1"
-        android:layout_columnWeight="2"
+        android:layout_below="@+id/textView"
+        android:layout_toRightOf="@+id/button2"
             android:id="@+id/checkBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Check this out!"/>
 
     <ImageButton
-        android:layout_row="2"
-        android:layout_column="0"
-        android:layout_columnWeight="1"
+        android:layout_below="@+id/button2"
             android:id="@+id/imageButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/flag" />
 
     <Switch
-        android:layout_gravity="fill"
-        android:layout_row="2"
-        android:layout_column="1"
-        android:layout_columnWeight="2"
+        android:layout_below="@+id/button2"
+        android:layout_toRightOf="@+id/imageButton"
             android:id="@+id/switch1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Switch on / off" />
 
     <EditText
-        android:layout_columnWeight="1"
-        android:layout_columnSpan="2"
+        android:layout_below="@+id/imageButton"
         android:id="@+id/textView3"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Type here"
         android:inputType="textPersonName" />
-</GridLayout>
+</RelativeLayout>
