--- a/app/src/main/res/layout/activity_main_linear.xml
+++ b/app/src/main/res/layout/activity_main_linear.xml
@@ -10,7 +10,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Look at my GUI"
+        android:text="@string/textview_message"
         android:textSize="30dp"
         tools:layout_editor_absoluteX="-3dp"
         tools:layout_editor_absoluteY="0dp" />
@@ -22,14 +22,14 @@
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Click Here" />
+            android:text="@string/button_click" />
 
         <CheckBox
             android:id="@+id/checkBox"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Check this out!"/>
+            android:text="@string/checkbox_message"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
