--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -10,13 +10,13 @@
         android:id="@+id/yourProfileText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Your Profile:"/>
+        android:text="@string/profile_message"/>
 
     <TextView
         android:id="@+id/yourNameText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Your name:"/>
+        android:text="@string/name_message"/>
 
     <EditText
         android:id="@+id/editTextName"
@@ -28,19 +28,20 @@
         android:id="@+id/emailText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Your Name:"/>
+        android:text="@string/email_message"/>
 
     <EditText
         android:id="@+id/editTextEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="Enter Your Email"
         android:inputType="textEmailAddress"/>
 
     <TextView
         android:id="@+id/pictureText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Your Picture:"/>
+        android:text="@string/picture_message"/>
 
     <ImageButton
         android:id="@+id/imageButton"
@@ -52,6 +53,6 @@
         android:id="@+id/takePictureText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Click the button above to take a picture"/>
+        android:text="@string/picture_click_message"/>
 
 </LinearLayout>
