--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -55,4 +55,10 @@
         android:layout_height="wrap_content"
         android:text="@string/picture_click_message"/>
 
+    <Button
+        android:id="@+id/goToChat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Go to chat"/>
+
 </LinearLayout>
