--- a/app/src/main/res/layout/row_receive.xml
+++ b/app/src/main/res/layout/row_receive.xml
@@ -4,6 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
     <TextView
         android:text="TextView"
         android:layout_width="wrap_content"
