--- a/app/src/main/res/layout/activity_chat_room.xml
+++ b/app/src/main/res/layout/activity_chat_room.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:id="@+id/messages_list"
         android:layout_weight="2"
-        android:divider="#fff"
+
         android:layout_height="wrap_content"
         />
 
@@ -24,7 +24,7 @@
 
         <Button
             android:id="@+id/messageSendButton"
-            android:text="Send"
+            android:text="@string/sendButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -37,14 +37,14 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:ems="10"
-            android:hint="Type here"
+            android:hint="@string/messageTypeArea"
             android:inputType="text"
             android:paddingHorizontal="10dp"
             android:text="" />
 
         <Button
             android:id="@+id/messageReceiveButton"
-            android:text="Receive"
+            android:text="@string/receiveButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
