--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -61,4 +61,10 @@
         android:layout_height="wrap_content"
         android:text="Go to chat"/>
 
+    <Button
+        android:id="@+id/goToWeatherForecast"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Go to Weather Forecast"/>
+
 </LinearLayout>
