--- a/app/src/main/res/layout/activity_weather_forecast.xml
+++ b/app/src/main/res/layout/activity_weather_forecast.xml
@@ -1,9 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WeatherForecast">
+    android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:id="@+id/imageViewCW"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="1">
+    <TextView
+        android:text="Current Temperature"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/tvCurrentTemp"
+        android:layout_weight="1" />
+    <TextView
+        android:text="Minimum Temperature"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/tvMinTemp"
+        android:layout_weight="1"/>
+    <TextView
+        android:text="Maximum Temperature"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/tvMaxTemp"
+        android:layout_weight="1"/>
+
+    <TextView
+        android:text="UV Rating"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/tvUvRating"
+        android:layout_weight="1"/>
+        </LinearLayout>
+    </LinearLayout>
+
+    <ProgressBar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/pBar"
+        style="?android:attr/progressBarStyleHorizontal"/>
+
+</LinearLayout>
