--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -67,4 +67,9 @@
         android:layout_height="wrap_content"
         android:text="Go to Weather Forecast"/>
 
+    <Button
+        android:id="@+id/goToToolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Go to Toolbar Page"/>
 </LinearLayout>
